<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/detailNotFavorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/menu_favorites"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/detailIsFavorite"
        android:icon="@drawable/ic_favorite_red"
        android:title="@string/menu_favorites"
        android:visible="true"
        app:showAsAction="ifRoom" />


</menu>