<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuFavorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/menu_favorites"
        app:showAsAction="always" />
</menu>